Change super script "xy" to use unidcode instead -Add ability to diplay numbers on calculator -Add ability to delete and clear current display -Add ability to take keyboard input for numbers

--- a/styles.css
+++ b/styles.css
@@ -67,14 +67,14 @@ body {
     overflow-wrap: break-word;
 }
 
-#previous, #current{
+#memory, #current{
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     word-wrap: wrap;
     word-break: break-all;
 }
-#previous {
+#memory {
     min-height: 30px;
     font-size: 1em; 
 }
