--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ body {
     grid-template-rows: auto;
     grid-gap: 10px;
     background-color: #1F2937;
-    padding: 10px;
+    padding: 20px;
     border-radius: 10px;
 }
 
@@ -93,8 +93,9 @@ button {
     border-radius: 25%;
     font-size: 1.5rem;
     font-weight: bolder;
+    border: solid black 2px;
 }
-#clear, #delete, #equals{  
+#clear, #delete{  
     color: white;
 }
 .operation {
@@ -109,6 +110,7 @@ button {
 #equal {
     background-color: rgb(228, 163, 67);
 }
+
 /* Sticky Footer */
 .footer {
     display: flex;    
